syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "google/protobuf/wrappers.proto";

message NotifyStarbuildRequest {
	int64 CaseId = 1;

	google.protobuf.StringValue RiskBusinessCaseId = 2;

	bool SkipRiskBusinessCaseId = 3;
}
